Closed Bug 1252857 Opened 8 years ago Closed 8 years ago

Closed html:select no longer fires value changed events when selecting a new value or typing letters

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
firefox47 --- fixed
firefox48 --- fixed

People

(Reporter: MarcoZ, Assigned: surkov)

Details

(Keywords: regression)

Attachments

(3 files)

This is a very recent regression, suspected bugs are either bug 1250878 or bug 1251680, both landed on Monday/Tuesday, and the first build this is in is the 2016-03-01 build of Nightly.

STR:
1. With NVDA and Firefox, focus the "Product" combobox in this bug, and press Enter.
2. NVDA will emit a typing sound to indicate that it switched to focus mode.
3. The current value is "Core". Type an f. Visually, the first entry with f is now selected.

Expected: NVDA should speak the new value.
Actual: NVDA remains silent, and NVDA+Tab still thinks that the selected item is "Core".

This is only true for closed comboboxes. As soon as you drop them down with Alt+DownArrow, the list talks. But when closed, the new value is not picked up.
Flags: needinfo?(surkov.alexander)
Attached patch patchSplinter Review
there's definitely value change events for comboboxes, here's a mochitest for this.

I need more data to figure out what's wrong.
Flags: needinfo?(surkov.alexander)
Attachment #8725718 - Flags: review?(mzehe)
Attachment #8725718 - Flags: review?(mzehe) → review+
Correction to my STR above: NVDA+Tab does speak the new value, but arrowing or first letter navigation does not. Thanks for the mochitest, it's good to actually cover this case.
This is just the mochitest, not a fix yet. Adding keyword to leave this open for the actual fix.
Keywords: leave-open
Alex, ping on this? Had any ideas? This is still an issue in latest nightly.
Flags: needinfo?(surkov.alexander)
(In reply to Marco Zehe (:MarcoZ) from comment #7)
> Alex, ping on this? Had any ideas? This is still an issue in latest nightly.

It would be helpful if Jamie had a look on it, it has to be something trivial, but as long as we fire value change events, I don't have good ideas what wrong may be here.
Flags: needinfo?(surkov.alexander)
Jamie, can you take a quick look and determine why you are no longer speaking our comboboxes in Nightly and Dev Edition (47 and 48 affected)? We seem to still be firing correct events...
Flags: needinfo?(jamie)
You're firing a value change on the "list" accessible (i.e. the accessible that contains the items that get focus when the select is expanded), instead of the "combo box" accessible.
Flags: needinfo?(jamie)
(In reply to James Teh [:Jamie] from comment #10)
> You're firing a value change on the "list" accessible (i.e. the accessible
> that contains the items that get focus when the select is expanded), instead
> of the "combo box" accessible.
Thanks Jamie! I suspected something like this was happening. The question is why our test, which clearly tests the combobox accessible, doesn't catch that fact. Alex, could this be in the platform-specific layer for Windows/IA2? And that the changes in bug 1251680 somehow make that fall over?
Flags: needinfo?(surkov.alexander)
Attached patch patchSplinter Review
when feeding an ID then targets are compared by DOM nodes, not by accessibles, that's why test passed.

let's have a new method and use it where we 100% sure it's required there
Assignee: nobody → surkov.alexander
Flags: needinfo?(surkov.alexander)
Attachment #8731712 - Flags: review?(mzehe)
Comment on attachment 8731712 [details] [diff] [review]
patch

r=me, thanks! Confirmed in a local build that this indeed fixes the problem.
Attachment #8731712 - Flags: review?(mzehe) → review+
Oops, this can be closed now.
Keywords: leave-open
Fix landed on 2016-03-19, see comment #21. Bug can be closed.
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Attached patch Patch for AuroraSplinter Review
Approval Request Comment
[Feature/regressing bug #]: bug 1251680
[User impact if declined]: When changing the combobox value with the arrow keys, screen reader users would no longer hear the updated value.
[Describe test coverage new/current, TreeHerder]: Landed and verified on Central, has test.
[Risks and why]: Low risk.
[String/UUID change made/needed]: None.
Attachment #8733452 - Flags: approval-mozilla-aurora?
Comment on attachment 8733452 [details] [diff] [review]
Patch for Aurora

Recent regression in 47, taking it.
Attachment #8733452 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.