Bug 1252857 - Value change events for HTML:select have wrong target. r=marcoz, a=ritu