accessible/generic/DocAccessible.cpp
@@ -1247,12 +1247,6 @@ DocAccessible::GetAccessibleOrContainer(nsINode* aNode) const
     if (!(currNode = parent)) break;
   }
 
-  // HTML comboboxes have no-content list accessible as an intermediate
-  // containing all options.
-  if (accessible && accessible->IsHTMLCombobox()) {
-    return accessible->FirstChild();
-  }
-
   return accessible;
 }
 
@@ -1699,6 +1693,12 @@ DocAccessible::ProcessContentInserted(Accessible* aContainer,
       // Continue to update the tree even if we don't have root content.
       // For example, elements may be inserted under the document element while
       // there is no HTML body element.
+    }
+
+    // HTML comboboxes have no-content list accessible as an intermediate
+    // containing all options.
+    if (container && container->IsHTMLCombobox()) {
+      container = container->FirstChild();
     }
 
     // We have a DOM/layout change under the container accessible, and its tree
